--- a/messages/package.json
+++ b/messages/package.json
@@ -9,10 +9,11 @@
     "express": "^4.14.0",
     "request": "^2.79.0",
     "restify": "^4.3.0",
-    "watson-developer-cloud": "^2.14.3"
+    "watson-developer-cloud": "^2.14.3",
+    "winston": "^2.3.0"
   },
   "devDependencies": {
-      "restify": "^4.1.1"
+    "restify": "^4.1.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
