--- a/messages/package.json
+++ b/messages/package.json
@@ -7,6 +7,7 @@
     "botbuilder": "^3.4.2",
     "botbuilder-azure": "0.0.1",
     "express": "^4.14.0",
+    "path": "^0.12.7",
     "request": "^2.79.0",
     "restify": "^4.3.0",
     "watson-developer-cloud": "^2.14.3",
