--- a/messages/package.json
+++ b/messages/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "botbuilder": "^3.4.2",
     "botbuilder-azure": "0.0.1",
+    "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "path": "^0.12.7",
     "request": "^2.79.0",
