--- a/messages/package.json
+++ b/messages/package.json
@@ -7,6 +7,7 @@
     "botbuilder": "^3.4.2",
     "botbuilder-azure": "0.0.1",
     "dotenv": "^4.0.0",
+    "lodash": "^4.17.4",
     "path": "^0.12.7",
     "request": "^2.79.0",
     "winston": "^2.3.0"
