--- a/messages/package.json
+++ b/messages/package.json
@@ -8,6 +8,7 @@
     "botbuilder-azure": "0.0.1",
     "dotenv": "^4.0.0",
     "lodash": "^4.17.4",
+    "newrelic": "^1.36.2",
     "path": "^0.12.7",
     "request": "^2.79.0",
     "winston": "^2.3.0"
